[project]
name = "salabim_simulator"
version = "0.0.56"
readme="readme.md"
requires-python = ">=3.13,<3.14"
# ===================================================================
# 애플리케이션 실행에 필수적인 프로덕션 의존성
# ===================================================================
dependencies = [
    "anyio==4.9.0",
    "blinker==1.9.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "fastapi==0.115.0",
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "greenlet==3.1.1",
    "gunicorn==21.2.0",
    "h11==0.14.0",
    "httpcore==1.0.8",
    "httpx==0.28.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "matplotlib>=3.10.1",
    "msgpack==1.1.0",
    "mypy>=1.15.0",
    "numpy==2.2.4",
    "openpyxl==3.1.5",
    "packaging==24.2",
    "paho-mqtt==2.1.0",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "psutil>=7.1.0",
    "psycopg2-binary==2.9.10",
    "pydantic==2.8.2",
    "pydantic-core==2.20.1",
    "pytest>=8.3.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "redis>=6.4.0",
    "requests==2.32.3",
    "salabim==25.0.8",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.40",
    "starlette==0.38.6",
    "status>=0.2.5",
    "typing-extensions==4.13.1",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "uvicorn==0.30.6",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
]

# ===================================================================
# 코드 포맷팅, 린팅, 테스팅 등 개발에만 필요한 의존성
# ===================================================================
[project.optional-dependencies]
dev = [
    "annotated-types==0.7.0",
    "black==25.1.0",
    "cfgv==3.4.0",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "distlib==0.3.9",
    "et-xmlfile==2.0.0",
    "filelock==3.18.0",
    "flake8==7.2.0",
    "fonttools==4.57.0",
    "identify==2.6.9",
    "iniconfig==2.1.0",
    "isort==6.0.1",
    "joblib==1.4.2",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.1",
    "mccabe==0.7.0",
    "mypy==1.15.0",
    "mypy-extensions==1.0.0",
    "nodeenv==1.9.1",
    "pathspec==0.12.1",
    "platformdirs==4.3.7",
    "pluggy==1.5.0",
    "pre-commit==4.2.0",
    "pycodestyle==2.13.0",
    "pyflakes==3.3.2",
    "pyparsing==3.2.3",
    "pytest==8.3.5",
    "ruff>=0.11.12",
    "threadpoolctl==3.6.0",
    "ty>=0.0.1a7",
    "virtualenv==20.30.0",
]

[tool.black]
line-length = 120

[tool.uv]
package = false
